fix word wrap messages

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.backround{
+.background{
     height: 100vh;
     width: 100%;
     padding: 24px;
@@ -184,6 +184,7 @@ main{
     padding: 18px;
     margin: 8px;
     position: relative;
+    word-wrap: break-word;
 }
 
 .messagesSent{
@@ -194,6 +195,7 @@ main{
     border-radius: 10px;
     margin: 8px;
     position: relative;
+    word-wrap: break-word;
 }
 
 .messagesSent small,
